
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_5__ {TYPE_1__* yytos; } ;
typedef TYPE_2__ yyParser ;
struct TYPE_4__ {size_t major; } ;


 int YYNSTATE ;
 int YY_MIN_REDUCE ;
 int fprintf (scalar_t__,char*,char*,char const*,int,int) ;
 int* yyTokenName ;
 scalar_t__ yyTraceFILE ;
 char* yyTracePrompt ;

__attribute__((used)) static void yyTraceShift(yyParser *yypParser, int yyNewState, const char *zTag){
  if( yyTraceFILE ){
    if( yyNewState<YYNSTATE ){
      fprintf(yyTraceFILE,"%s%s '%s', go to state %d\n",
         yyTracePrompt, zTag, yyTokenName[yypParser->yytos->major],
         yyNewState);
    }else{
      fprintf(yyTraceFILE,"%s%s '%s', pending reduce %d\n",
         yyTracePrompt, zTag, yyTokenName[yypParser->yytos->major],
         yyNewState - YY_MIN_REDUCE);
    }
  }
}
